--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "knplabs/knp-paginator-bundle": "5.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
         "sensio/framework-extra-bundle": "^6.2",
@@ -45,6 +46,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "escapestudios/symfony2-coding-standard": "^3.13",
+        "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.22",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7",
